Added a routes directory and then implemented changes to the index.mjs server file by destructuring the code and adding the routes to a different routes file. Added flash messages and cookie sessions  to all of the routes.
NOTE: The review validation function is still not corrected
and the review validation requires validation.

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,3 +26,15 @@
           </div>
         </div>
       </nav>
+
+      <% if (success.length) { %>
+      <div class="alert alert-primary alert-dismissible fade show" role="alert">
+        <strong>Done! <%= success %></strong>  
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+      <% } else if(error.length) { %>
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+          <strong> Not Done! <%= error %></strong>  
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        <% } %>
