--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -20,17 +20,24 @@
                         <%=campground.price %>
                     </li>
                 </ul>
-                <div class="card-body">
-                    <a href="/campgrounds/<%=campground._id%>/edit" class="card-link btn btn-info">Edit</a>
-                    <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
-                        <button class="btn btn-danger">Delete</button>
-                    </form>
-                </div>
-                <div class="card-footer text-muted">
-                    2 days ago
-                </div>
+                <% if (currentUser && campground.author && campground.author.equals(currentUser._id)) { %>
+                    <div class="col-6">
+                        <div class="card">
+                            <div class="card-body">
+                                    <a href="/campgrounds/<%=campground._id%>/edit" class="card-link btn btn-info">Edit</a>
+                                    <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
+                                        <button class="btn btn-danger">Delete</button>
+                                    </form>
+                                </div>
+                            <div class="card-footer text-muted">
+                                2 days ago
+                            </div>
+                        </div>
+                    </div>
+                <% } %>
             </div>
         </div>
+       <% if(currentUser) { %>
         <div class="col-6">
             <div class="col-6">
                 <h2>Leave A Review</h2>
@@ -46,16 +53,20 @@
                     <button class="btn btn-success mt-3">Submit</button>
                 </div>
             </form>
+        <%}%>
             <% for(let review of campground.review ) { %>
                 <div class="card mb-3 col-6">
                     <div class="card-body">
                         <h5 class="card-title">Rating: <%= review.rating %>
                         </h5>
+                        <p><b>By <%= review.author.username %></b><p>
                         <p>Review: <%= review.review %>
                         </p>
+                        <% if (currentUser && review.author && review.author.equals(currentUser._id)) { %>
                         <form action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE" method="POST" class="mb-3">
                             <button class="btn btn-danger btn-sm">Delete</button>
                         </form>
+                        <% } %>
                     </div>
                 </div>
             <% } %>
