--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include('/partials/header.ejs'); %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
+<h1>HOME! YELP CAMP!</h1>
 
-<body>
-    <h1>HOME! YELP CAMP!</h1>
-
-</body>
-
-</html>'
+<%- include('/partials/footer.ejs'); %>
 
