--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -3,39 +3,57 @@
     <div class="row">
         <h1 class="text-center">Edit Campground</h1>
         <div class="col-6 offset-3">
-            <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST" class="needs-validation" novalidate>
+            <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST" class="needs-validation" novalidate enctype="multipart/form-data">
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
                     <input class="form-control" type="text" id="title" name="campground[title]"
                         value="<%= campground.title %>" required>
                 </div>
-                <div class="mb-3">
-                    <label class="form-label" for="location">Location</label>
-                    <input class="form-control" type="text" id="location" name="campground[location]"
-                        value="<%= campground.location %>" required>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="image">Image Url</label>
-                    <input class="form-control" type="text" id="image" name="campground[image]"
-                        value="<%=campground.image%>" required>
-                </div>
+                <label class="form-label" for="location">Location</label>
+                <div class="row" id="location">
+                    <div class="col-6">
+                        <input class="form-control" type="text" id="location" name="campground[location.postcode]" value="<%= campground.location.postcode %>" required>
+                    </div>
+                    <div class="col-6">
+                        <input class="form-control" type="text" id="location" name="campground[location.city]" value="<%= campground.location.city %>" required>
+                    </div>
+                </div><br>
+                <div class="row">
+                    <div class="col-6">
+                        <input class="form-control" type="text" id="location" name="campground[location.state]" value="<%= campground.location.state %>" required>
+                    </div>
+                   <div class="col-6">
+                        <input class="form-control" type="text" id="location" name="campground[location.country]" value="<%= campground.location.country %>" required>
+                   </div>
+                </div><br>
+                <div class="input-group mb-3">
+                    <input type="file" class="form-control" id="inputGroupFile02" multiple name="images[]">
+                    <label class="input-group-text" for="inputGroupFile02">Add Images</label>
+                </div>   
                 <div class="mb-3">
                     <label class="form-label" for="price">Campground Price</label>
                     <div class="input-group mb-3">
                         <span class="input-group-text" id="price-label">$</span>
-                        <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="Username"
-                            aria-describedby="price-label" value="<%=campground.price%>" name="campground[price]" required>
+                        <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="Username" aria-describedby="price-label" value="<%=campground.price%>" name="campground[price]" required>
                     </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="description">Description</label>
-                    <textarea class="form-control" type="text" id="description"
-                        name="campground[description]" required><%= campground.description%></textarea>
+                    <textarea class="form-control" type="text" id="description" name="campground[description]" required><%= campground.description%></textarea>
+                </div>
+                <div class="mb-3">
+                    <% campground.images.forEach(function (img,i) { %>
+                        <img src="<%=img.thumbnail%>" class="img-thumbnail" alt=""/>
+                        <div class="form-check-inline">
+                            <input type="checkbox" id="image-<%=i%>" name="deleteImages[]" value="<%=img.filename%>">
+                            <label for="image-<%=i%>">Delete?</label>
+                        </div>
+                    <% }) %>
                 </div>
                 <div class="mb-3"><button class="btn btn-info">Update</button></div>
             </form>
             <footer>
-                <a href="/campgrounds/<%=campground._id%>">Back To Campground</a>
+                <div class="mb-3"><button class="btn btn-success"><a href="/campgrounds/<%=campground._id%>">Back To Campground</a></button></div>
             </footer>
         </div>
     </div>
