--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,7 +3,35 @@
     <div class="row">
         <div class="col-6 mt-3">
             <div class="card mb-3">
-                <img src="<%= campground.image %>" class="card-img-top" alt="...">
+
+
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <% campground.images.forEach((image ,i) => {%>
+                            <div class="carousel-item <%= i === 0?'active':''%>">
+                                <img src="<%= image.url %>" class="d-block w-100" alt="">
+                            </div>
+                            <% }) %>
+                    </div>
+
+
+                   <% if(campground.images.length > 1 ) { %>
+                        
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+                    
+                    <% } %>
+                </div>
+
+
                 <div class="card-body">
                     <h5 class="card-title">
                         <%= campground.title %>
@@ -24,53 +52,75 @@
                     <div class="col-6">
                         <div class="card">
                             <div class="card-body">
-                                    <a href="/campgrounds/<%=campground._id%>/edit" class="card-link btn btn-info">Edit</a>
-                                    <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
-                                        <button class="btn btn-danger">Delete</button>
-                                    </form>
-                                </div>
+                                <a href="/campgrounds/<%=campground._id%>/edit" class="card-link btn btn-info">Edit</a>
+                                <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=DELETE"
+                                    method="POST">
+                                    <button class="btn btn-danger">Delete</button>
+                                </form>
+                            </div>
                             <div class="card-footer text-muted">
                                 2 days ago
                             </div>
                         </div>
                     </div>
-                <% } %>
+                    <% } %>
             </div>
         </div>
-       <% if(currentUser) { %>
-        <div class="col-6">
+        <% if(currentUser) { %>
             <div class="col-6">
-                <h2>Leave A Review</h2>
-            </div>
-            <form method="POST" action="/campgrounds/<%= campground._id %>/reviews" class="mb-3 needs-validation" novalidate>
-                <div class="col-6 mb-3">
-                    <label class="form-label" for="rating">Rating</label>
-                    <input type="range" name="rating" min="1" max="5" id="rating" class="form-range">
+                <div class="col-6">
+                    <h2>Leave A Review</h2>
                 </div>
-                <div class="col-6 mb-3">
-                    <label class="form-label" for="body">Review</label>
-                    <textarea class="form-control" name="review" rows="3" columns="30" required></textarea>
-                    <button class="btn btn-success mt-3">Submit</button>
-                </div>
-            </form>
-        <%}%>
-            <% for(let review of campground.review ) { %>
-                <div class="card mb-3 col-6">
-                    <div class="card-body">
-                        <h5 class="card-title">Rating: <%= review.rating %>
-                        </h5>
-                        <p><b>By <%= review.author.username %></b><p>
-                        <p>Review: <%= review.review %>
-                        </p>
-                        <% if (currentUser && review.author && review.author.equals(currentUser._id)) { %>
-                        <form action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE" method="POST" class="mb-3">
-                            <button class="btn btn-danger btn-sm">Delete</button>
-                        </form>
-                        <% } %>
+                <form method="POST" action="/campgrounds/<%= campground._id %>/reviews" class="mb-3 needs-validation"
+                    novalidate>
+
+                    <fieldset class="starability-basic">
+                        <legend>First rating:</legend>
+                        <input type="radio" id="no-rate" class="input-no-rate" name="rating" value="0" checked
+                            aria-label="No rating." />
+                        <input type="radio" id="first-rate1" name="rating" value="1" />
+                        <label for="first-rate1" title="Terrible">1 star</label>
+                        <input type="radio" id="first-rate2" name="rating" value="2" />
+                        <label for="first-rate2" title="Not good">2 stars</label>
+                        <input type="radio" id="first-rate3" name="rating" value="3" />
+                        <label for="first-rate3" title="Average">3 stars</label>
+                        <input type="radio" id="first-rate4" name="rating" value="4" />
+                        <label for="first-rate4" title="Very good">4 stars</label>
+                        <input type="radio" id="first-rate5" name="rating" value="5" />
+                        <label for="first-rate5" title="Amazing">5 stars</label>
+                    </fieldset>
+
+                    <div class="col-6 mb-3">
+                        <label class="form-label" for="body">Review</label>
+                        <textarea class="form-control" name="review" rows="3" columns="30" required></textarea>
+                        <button class="btn btn-success mt-3">Submit</button>
                     </div>
-                </div>
-            <% } %>
+                </form>
+                <%}%>
+                    <% for(let review of campground.review ) { %>
+                        <div class="card mb-3 col-6">
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    <h3>
+                                        <%= review.author.username %>
+                                    </h3>
+                                    <p class="starability-result" data-rating="<%=review.rating %>">
+                                        Rated: <%= review.rating %> stars
+                                    </p>
+                                    <p>
+                                        <%= review.review %>
+                                    </p>
+                                    <% if (currentUser && review.author && review.author.equals(currentUser._id)) { %>
+                                        <form
+                                            action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE"
+                                            method="POST" class="mb-3">
+                                            <button class="btn btn-danger btn-sm">Delete</button>
+                                        </form>
+                                        <% } %>
+                            </div>
+                        </div>
+                        <% } %>
+            </div>
     </div>
     </div>
-</div>
-        <%- include('../partials/footer.ejs'); %>
+    <%- include('../partials/footer.ejs'); %>
