--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,6 +7,7 @@
     <title>Campgrounds</title>
     <link rel="stylesheet"  href="../../public/css/bootstrap.min.css"/>
     <script src="../../public/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="../../public/stylesheet/stars.css"/>
 </head>
 
 <body>
