Added map and geolocation lat and lon to be stored in the database

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -12,18 +12,18 @@
                     <label class="form-label" for="location">Location</label>
                     <div class="row">
                         <div class="col-6">
-                            <input class="form-control" type="text" id="location" name="campground[location.postcode]" required placeholder="POSTCODE">
+                            <input class="form-control" type="text" id="location" name="campground[postcode]" required placeholder="POSTCODE">
                         </div>
                         <div class="col-6">
-                            <input class="form-control" type="text" id="location" name="campground[location.city]" required placeholder="CITY">
+                            <input class="form-control" type="text" id="location" name="campground[city]" required placeholder="CITY">
                         </div>
                     </div><br>
                     <div class="row">
                         <div class="col-6">
-                            <input class="form-control" type="text" id="location" name="campground[location.state]" required placeholder="STATE">
+                            <input class="form-control" type="text" id="location" name="campground[state]" required placeholder="STATE">
                         </div>
                        <div class="col-6">
-                            <input class="form-control" type="text" id="location" name="campground[location.country]" required placeholder="COUNTRY">
+                            <input class="form-control" type="text" id="location" name="campground[country]" required placeholder="COUNTRY">
                        </div>
                     </div><br>
                 </div>
