--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,32 +1,59 @@
 <%- include('../partials/header.ejs'); %>
 
+    <div class="mt-3 col-md-6 mx-auto">
+        <div id="map"></div>
+        <script>
+
+            var map, Marker1;
+
+            async function initMap1() {
+                const campground = '<%- JSON.stringify(campground) %>';
+                const newCampground = JSON.parse(campground);
+
+                map = new mappls.Map('map', {
+                    center: [28.61, 77.23],
+                    zoomControl: true,
+                    location: true
+                });
+                Marker1 = new mappls.Marker({
+                    map: map,
+                    position: {
+                        "lat": newCampground.geolocation.lat,
+                        "lng": newCampground.geolocation.lon
+                    },
+                    fitbounds: true,
+                    icon_url: 'https://apis.mapmyindia.com/map_v3/1.png'
+                });  
+                map.setZoom(18);
+            }
+        </script>
+    </div>
+
     <div class="row">
         <div class="col-6 mt-3">
             <div class="card mb-3">
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                        <% campground.images.forEach((image ,i) => {%>
+                        <% campground.images.forEach((image ,i)=> {%>
                             <div class="carousel-item <%= i === 0?'active':''%>">
                                 <img src="<%= image.url %>" class="d-block w-100" alt="">
                             </div>
                             <% }) %>
                     </div>
+                    <% if(campground.images.length> 1 ) { %>
 
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
 
-                   <% if(campground.images.length > 1 ) { %>
-                        
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-                    
-                    <% } %>
+                        <% } %>
                 </div>
 
 
@@ -41,9 +68,9 @@
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item text-muted">
                         <%= campground.postcode %>,
-                        <%= campground.city %>,
-                        <%= campground.state %>,
-                        <%= campground.country %>
+                            <%= campground.city %>,
+                                <%= campground.state %>,
+                                    <%= campground.country %>
                     </li>
                     <li class="list-group-item">
                         <%=campground.price %>
@@ -124,4 +151,5 @@
             </div>
     </div>
     </div>
+
     <%- include('../partials/footer.ejs'); %>
