--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,20 @@
+<div id="footer" class="container text-center">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center">
+      <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+        <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+      </a>
+      <span class="text-muted" id="copy">© 2024 YelpCamp, Inc</span>
+    </div>
+
+    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex text-center" id="ul">
+      <li class="ms-3"><a id="name" class="text-muted" href="#">Sonu Dhukia</a></li>
+      <li class="ms-3"><a class="text-muted" target="_blank" href="https://github.com/Sonudhukia143"><i class="fa-brands fa-github"></i></a></li>
+      <li class="ms-3"><a class="text-muted" target="_blank" href="https://www.linkedin.com/in/sonu-dhukia-20750a246/"><i class="fa-brands fa-linkedin"></i></a></li>
+    </ul>
+  </footer>
+</div>
+
 <script>// Example starter JavaScript for disabling form submissions if there are invalid fields
     (function () {
       'use strict'
@@ -19,6 +36,8 @@
         })
     })()
 </script>
+
+<script src="https://kit.fontawesome.com/17e6a36de8.js" crossorigin="anonymous"></script>
 
 </body>
 
