--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,20 +1,25 @@
 <%- include('../partials/header.ejs'); %>
 
-<div class="row">
-    <h1 class="text-center">Login</h1>
-    <div class="col-6 offset-3">
-        <form action="/campgrounds/login" class="needs-validation" method="POST" novalidate>
-            <div class="mb-3">
-                <label class="form-label" for="username">Username</label>
-                <input class="form-control" type="username" id="username" name="username" required>
+<br><br><br>
+    <div class="row">
+        <div class="card mx-auto" style="width: 18rem;">
+            <img src="/campgroundimages/loginpage.jpg" class="card-img-top" alt="">
+            <div class="card-body">
+                <h5 class="card-title">Sign Up</h5>
             </div>
-            <div class="mb-3">
-                <label class="form-label" for="password">Password</label>
-                <input class="form-control" type="password" id="password" name="password" required>
-            </div>
-            <div class="mb-3"><button class="btn btn-success">Register</button></div>
-        </form>
+            <form action="/campgrounds/login" class="needs-validation" method="POST" novalidate>
+                <ul class="list-group list-group-flush">
+                    <label class="form-label" for="username">Username</label>
+                </ul>
+                <input class="form-control list-group-item" type="username" id="username" name="username" required>
+                <ul class="list-group list-group-flush">
+                    <label class="form-label" for="password">Password</label>
+                </ul>
+                <input class="form-control" type="password" id="password" name="password" required><br>
+                <div class="mb-3"><button class="btn btn-success">Register</button></div>
+                <a href="/campgrounds/register">not a user?</a>
+            </form>
+        </div>
     </div>
-</div>
 
-<%- include('../partials/footer.ejs'); %>
+    <%- include('../partials/footer.ejs'); %>
