--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,9 +12,9 @@
     <script src="https://apis.mappls.com/advancedmaps/api/d68917d0fae02011d16188de6d3867cb/map_sdk?layer=vector&v=3.0&callback=initMap1" defer async></script>
 </head>
 
-<body>
+<body style="margin: 0px; padding: 0px; margin: 0px;">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark col-12" style="width: 104%;">
         <div class="container-fluid">
           <a class="navbar-brand" href="">YelpCamp</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
