--- a/views/error/error.ejs
+++ b/views/error/error.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header.ejs'); %>
 
-<div class="error.ejsDiv" style="display:flex; width: fit-content; height: 70vh;">
+<div style="display:flex; width: fit-content; height: 70vh;">
     <img src="/campgroundimages/2img-404.jpg" style="display:flex;  width: 100%;"/>
 </div>
 
