--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,7 @@
 
 <body style="margin: 0px; padding: 0px; margin: 0px;">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark col-12" style="width: 104%;">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark col-12" >
         <div class="container-fluid">
           <a class="navbar-brand" href="">YelpCamp</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
