--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,9 @@
     <link rel="stylesheet"  href="../../public/css/bootstrap.min.css"/>
     <script src="../../public/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../../public/stylesheet/stars.css"/>
-    <script src="https://apis.mappls.com/advancedmaps/api/<%=process.env.mapplesmapapikey%>/map_sdk?layer=vector&v=3.0&callback=initMap1" defer async></script>
+    <script src="https://apis.mappls.com/advancedmaps/api/<%= process.env.MAPPLES_MAP_API_KEY %>/map_sdk?layer=vector&v=3.0&callback=initMap1" async defer></script>
+
+
 </head>
 
 <body style="margin: 0px; padding: 0px; margin: 0px;">
