--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,177 +1,176 @@
 <%- include('../partials/header.ejs'); %>
 
-<br>
-<br>
+    <br>
+    <br>
 
-<div class="d-flex col-9 mx-auto" id="outer-div-show-page">
+    <div class="d-flex col-9 mx-auto" id="outer-div-show-page">
 
-    <div class="row d-inline-block col-6 mx-auto" id="inner-campground-div-showpage">
-        <div class="col-12 mt-3">
-            <div class="card mb-3">
-                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <% campground.images.forEach((image ,i)=> {%>
-                            <div class="carousel-item <%= i === 0?'active':''%>">
-                                <img src="<%= image.url %>" class="d-block w-100" alt="">
-                            </div>
-                            <% }) %>
+        <div class="row d-inline-block col-6 mx-auto" id="inner-campground-div-showpage">
+            <div class="col-12 mt-3">
+                <div class="card mb-3">
+                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <% campground.images.forEach((image ,i)=> {%>
+                                <div class="carousel-item <%= i === 0?'active':''%>">
+                                    <img src="<%= image.url %>" class="d-block w-100" alt="">
+                                </div>
+                                <% }) %>
+                        </div>
+                        <% if(campground.images.length> 1 ) { %>
+
+                            <button class="carousel-control-prev" type="button"
+                                data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button"
+                                data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+
+                            <% } %>
                     </div>
-                    <% if(campground.images.length> 1 ) { %>
-
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
-
-                        <% } %>
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">
-                        <%= campground.title %>
-                    </h5>
-                    <p class="card-text">
-                        <%= campground.description%>
-                    </p>
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item text-muted">
-                        <%= campground.postcode %>,
-                            <%= campground.city %>,
-                                <%= campground.state %>,
-                                    <%= campground.country %>
-                    </li>
-                    <li class="list-group-item">
-                       $<%=campground.price %> for a day
-                    </li>
-                    <li class="list-group-item">
-                        2 years ago
-                    </li>
-                </ul>
-                <% if (currentUser && campground.author && campground.author.equals(currentUser._id)) { %>
-                    <div class="col-12">
-                        <div class="card">
-                            <div class="card-body">
-                                <a href="/campgrounds/<%=campground._id%>/edit" class="card-link btn btn-info">Edit</a>
-                                <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=DELETE"
-                                    method="POST">
-                                    <button class="btn btn-danger">Delete</button>
-                                </form>
-                            </div>
-                            <div class="card-footer text-muted">
-                                2 days ago
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <%= campground.title %>
+                        </h5>
+                        <p class="card-text">
+                            <%= campground.description%>
+                        </p>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item text-muted">
+                            <%= campground.postcode %>,
+                                <%= campground.city %>,
+                                    <%= campground.state %>,
+                                        <%= campground.country %>
+                        </li>
+                        <li class="list-group-item">
+                            $<%=campground.price %> for a day
+                        </li>
+                        <li class="list-group-item">
+                            2 years ago
+                        </li>
+                    </ul>
+                    <% if (currentUser && campground.author && campground.author.equals(currentUser._id)) { %>
+                        <div class="col-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <a href="/campgrounds/<%=campground._id%>/edit"
+                                        class="card-link btn btn-info">Edit</a>
+                                    <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=DELETE"
+                                        method="POST">
+                                        <button class="btn btn-danger">Delete</button>
+                                    </form>
+                                </div>
+                                <div class="card-footer text-muted">
+                                    2 days ago
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <% } %>
+                        <% } %>
+                </div>
             </div>
+            <br>
+
         </div>
-        <br>
- 
-    </div>
 
-    <div class="mt-3 mx-auto d-inline-block col-6" id="inner-map-div-showpage">
-        <div id="map" id="inner-map-div-showpage"></div>
-        <script>
+        <div class="mt-3 mx-auto d-inline-block col-6" id="inner-map-div-showpage">
+            <div id="map" id="inner-map-div-showpage"></div>
 
-            const campground = <%- JSON.stringify(campground) %>;
+            <script>
+                const campground = <%- JSON.stringify(campground) %>;
 
-            console.log(campground)
+                const newCampground = {
+                    coordinates: campground.geometry.coordinates
+                }
 
-            const newCampground = {
-                coordinates: campground.geometry.coordinates
-            }
+                var map;
+                function initMap1() {
+                    map = new mappls.Map('map', {
+                        center: [newCampground.coordinates[0], newCampground.coordinates[1]],
+                    });
 
-            console.log(newCampground);
+                    Marker1 = new mappls.Marker({
+                        map: map,
+                        position: {
+                            "lat": newCampground.coordinates[0],
+                            "lng": newCampground.coordinates[1]
+                        },
+                        icon_url: 'https://apis.mapmyindia.com/map_v3/1.png'
 
-            var map;
-            function initMap1() {
-                map = new mappls.Map('map', {
-                    center: [newCampground.coordinates[0], newCampground.coordinates[1]],
-                });
+                    }); map.setZoom(12);
+                }
+            </script>
 
-                Marker1 = new mappls.Marker({
-                    map: map,
-                    position: {
-                        "lat": newCampground.coordinates[0],
-                        "lng": newCampground.coordinates[1]
-                    },
-                    icon_url: 'https://apis.mapmyindia.com/map_v3/1.png'
-                
-                }); map.setZoom(12);
-            }
-        </script>
+            <br>
+            <% if(!currentUser) { %>
+                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                    <strong><a href="/campgrounds/login" class="alert-link">Log In!</a></strong> to leave a review about
+                    the place.
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                <% } %>
 
-        <br>
-<% if(!currentUser) { %>
-    <div class="alert alert-warning alert-dismissible fade show" role="alert">
-        <strong><a href="/campgrounds/login" class="alert-link">Log In!</a></strong> to leave a review about the place.
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-<% } %>
+                    <!-- to show all review logic -->
+                    <% for(let review of campground.review ) { %>
+                        <div class="card mb-3 col-12">
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    <h3>
+                                        <%= review.author.username %>
+                                    </h3>
+                                    <p class="starability-result" data-rating="<%=review.rating %>">
+                                        Rated: <%= review.rating %> stars
+                                    </p>
+                                    <p>
+                                        <%= review.review %>
+                                    </p>
+                                    <% if (currentUser && review.author && review.author.equals(currentUser._id)) { %>
+                                        <form
+                                            action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE"
+                                            method="POST" class="mb-3">
+                                            <button class="btn btn-danger btn-sm">Delete</button>
+                                        </form>
+                                        <% } %>
+                            </div>
+                        </div>
+                        <% } %>
 
-        <!-- to show all review logic -->
-                            <% for(let review of campground.review ) { %>
-                                <div class="card mb-3 col-12">
-                                    <div class="card-body">
-                                        <h5 class="card-title">
-                                            <h3>
-                                                <%= review.author.username %>
-                                            </h3>
-                                            <p class="starability-result" data-rating="<%=review.rating %>">
-                                                Rated: <%= review.rating %> stars
-                                            </p>
-                                            <p>
-                                                <%= review.review %>
-                                            </p>
-                                            <% if (currentUser && review.author && review.author.equals(currentUser._id)) { %>
-                                                <form
-                                                    action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE"
-                                                    method="POST" class="mb-3">
-                                                    <button class="btn btn-danger btn-sm">Delete</button>
-                                                </form>
-                                                <% } %>
-                                    </div>
+                            <!-- leave a review logic-->
+                            <% if(currentUser) { %>
+                                <div class="col-6 mx-auto">
+                                    <h2>Leave A Review</h2>
                                 </div>
-                                <% } %>
+                                <form method="POST" action="/campgrounds/<%= campground._id %>/reviews"
+                                    class="mb-3 needs-validation" novalidate>
 
-                                <!-- leave a review logic-->
-                                <% if(currentUser) { %>
-                                    <div class="col-6 mx-auto">
-                                        <h2>Leave A Review</h2>
+                                    <fieldset class="starability-basic">
+                                        <legend>First rating:</legend>
+                                        <input type="radio" id="no-rate" class="input-no-rate" name="rating" value="0"
+                                            checked aria-label="No rating." />
+                                        <input type="radio" id="first-rate1" name="rating" value="1" />
+                                        <label for="first-rate1" title="Terrible">1 star</label>
+                                        <input type="radio" id="first-rate2" name="rating" value="2" />
+                                        <label for="first-rate2" title="Not good">2 stars</label>
+                                        <input type="radio" id="first-rate3" name="rating" value="3" />
+                                        <label for="first-rate3" title="Average">3 stars</label>
+                                        <input type="radio" id="first-rate4" name="rating" value="4" />
+                                        <label for="first-rate4" title="Very good">4 stars</label>
+                                        <input type="radio" id="first-rate5" name="rating" value="5" />
+                                        <label for="first-rate5" title="Amazing">5 stars</label>
+                                    </fieldset>
+
+                                    <div class="col-12 mb-3 mx-auto">
+                                        <label class="form-label" for="body">Review</label>
+                                        <textarea class="form-control" name="review" rows="3" columns="30"
+                                            required></textarea>
+                                        <button class="btn btn-success mt-3">Submit</button>
                                     </div>
-                                    <form method="POST" action="/campgrounds/<%= campground._id %>/reviews" class="mb-3 needs-validation"
-                                        novalidate>
-                    
-                                        <fieldset class="starability-basic">
-                                            <legend>First rating:</legend>
-                                            <input type="radio" id="no-rate" class="input-no-rate" name="rating" value="0" checked
-                                                aria-label="No rating." />
-                                            <input type="radio" id="first-rate1" name="rating" value="1" />
-                                            <label for="first-rate1" title="Terrible">1 star</label>
-                                            <input type="radio" id="first-rate2" name="rating" value="2" />
-                                            <label for="first-rate2" title="Not good">2 stars</label>
-                                            <input type="radio" id="first-rate3" name="rating" value="3" />
-                                            <label for="first-rate3" title="Average">3 stars</label>
-                                            <input type="radio" id="first-rate4" name="rating" value="4" />
-                                            <label for="first-rate4" title="Very good">4 stars</label>
-                                            <input type="radio" id="first-rate5" name="rating" value="5" />
-                                            <label for="first-rate5" title="Amazing">5 stars</label>
-                                        </fieldset>
-                    
-                                        <div class="col-12 mb-3 mx-auto">
-                                            <label class="form-label" for="body">Review</label>
-                                            <textarea class="form-control" name="review" rows="3" columns="30" required></textarea>
-                                            <button class="btn btn-success mt-3">Submit</button>
-                                        </div>
-                                    </form>
-                                    <%} %> 
-    </div>
+                                </form>
+                                <%} %>
+        </div>
 
     </div>
 
